--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,12 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@utils/*": ["src/utils/*"],
+      "@db/*": ["src/db/*"],
+      "@decorators/*": ["src/decorators/*"],
+      "@modules/*": ["src/modules/*"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
