--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^9.0.1",
     "@nestjs/platform-express": "^9.0.0",
     "apollo-server": "^3.11.1",
+    "archiver": "^5.3.1",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
@@ -50,6 +51,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/archiver": "^5.3.1",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
