--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DB_PORT=5432
 DB_USER_NAME=ntl870
 DB_PASSWORD=1
 DB_NAME=test
+MAIL_USER_NAME=storageappmailer@gmail.com
+MAIL_PASSWORD=hsuwfkstapwdurvl
