add remove and switch role

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DB_PASSWORD=1
 DB_NAME=test
 MAIL_USER_NAME=storageappmailer@gmail.com
 MAIL_PASSWORD=hsuwfkstapwdurvl
+FRONT_END_URL=http://localhost:3000
