--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ DB_NAME=test
 MAIL_USER_NAME=storageappmailer@gmail.com
 MAIL_PASSWORD=hsuwfkstapwdurvl
 FRONT_END_URL=http://localhost:3000
+OAUTH_CLIENT_ID=947218783000-6ktq627vlhqaev07lvsqbop7gbohbeft.apps.googleusercontent.com
+OAUTH_SECRET=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
+OAUTH_REFRESH_TOKEN=1//049d1Uhh1MUsTCgYIARAAGAQSNwF-L9IrroCjkdoo5ldZVg_28QVlWKn7PzoKj1Mr2p9_LjJCn2cwb_FA5UnVCslLa1fT9biM1A8
