--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "archiver": "^5.3.1",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "google-auth-library": "^8.7.0",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.17",
     "graphql-upload": "^13.0.0",
