--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.17",
     "graphql-upload": "^13.0.0",
+    "lodash": "^4.17.21",
     "ncp": "^2.0.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
@@ -59,6 +60,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
+    "@types/lodash": "^4.14.194",
     "@types/ncp": "^2.0.5",
     "@types/node": "^18.13.0",
     "@types/nodemailer": "^6.4.7",
