--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "nest start --watch",
     "debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "build:prod": "env-cmd -f ./.env.prod yarn build",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -31,12 +32,14 @@
     "apollo-server": "^3.11.1",
     "archiver": "^5.3.1",
     "bcrypt": "^5.1.0",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "google-auth-library": "^8.7.0",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.17",
     "graphql-upload": "^13.0.0",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "ncp": "^2.0.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
@@ -58,9 +61,11 @@
     "@nestjs/testing": "^9.0.0",
     "@types/archiver": "^5.3.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/lodash": "^4.14.194",
+    "@types/multer": "^1.4.7",
     "@types/ncp": "^2.0.5",
     "@types/node": "^18.13.0",
     "@types/nodemailer": "^6.4.7",
@@ -69,6 +74,8 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "dotenv": "^16.0.3",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
