--- a/.env.prod
+++ b/.env.prod
@@ -6,7 +6,7 @@ DB_PASSWORD=1
 DB_NAME=ntl870
 MAIL_USER_NAME=storageappmailer@gmail.com
 MAIL_PASSWORD=hsuwfkstapwdurvl
-FRONT_END_URL=http://localhost:3000
+FRONT_END_URL=https://storageapp.cloud
 OAUTH_CLIENT_ID=947218783000-6ktq627vlhqaev07lvsqbop7gbohbeft.apps.googleusercontent.com
 OAUTH_SECRET=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
 OAUTH_REFRESH_TOKEN=1//04YLC63EM4nWOCgYIARAAGAQSNwF-L9Ir_k9nDO3CkToYr_TpLZRqzGClP8Svb6BxYq1zi9V3H8nJH58wv0MFR_Q2HVkEj4os-yA
