--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "graphql-tools": "^8.3.17",
     "graphql-upload": "^13.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "ncp": "^2.0.0",
     "nodemailer": "^6.9.1",
