--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "apollo-server": "^3.11.1",
     "archiver": "^5.3.1",
     "bcrypt": "^5.1.0",
+    "diskusage": "^1.1.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "google-auth-library": "^8.7.0",
