--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 JWT_SECRET=ntlong
-DB_HOST=139.162.10.190
+DB_HOST=localhost
 DB_PORT=5432
-DB_USER_NAME=admin
+DB_USER_NAME=ntl870
 DB_PASSWORD=1
-DB_NAME=ntl870
+DB_NAME=test
 MAIL_USER_NAME=storageappmailer@gmail.com
 MAIL_PASSWORD=hsuwfkstapwdurvl
 FRONT_END_URL=http://localhost:3000
