--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,16 +9,24 @@ orbs:
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
 workflows:
+  version: '18.17.0'
   sample: # This is the name of the workflow, feel free to change it to better match your workflow.
     # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - node/build:
+      - install:
+          - run:
+              name: Build
+              command: yarn build
+      - build:
           # This is the node version to use for the `cimg/node` tag
           # Relevant tags can be found on the CircleCI Developer Hub
           # https://circleci.com/developer/images/image/cimg/node
-          version: '18.17.0'
+
           # If you are using yarn, change the line below from "npm" to "yarn"
-          pkg-manager: yarn
-      - node/start:prod:
-          version: '18.17.0'
-          pkg-manager: yarn
+          - run:
+              name: Build
+              command: yarn build
+      - start:
+          - run:
+              name: Start prod
+              command: yarn start:prod
