--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "dev:sls": "nest build && sls offline",
+    "deploy:sls": "nest build && sls deploy",
     "dev": "nest start --watch",
     "debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -30,10 +32,12 @@
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/passport": "^9.0.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@vendia/serverless-express": "^4.10.4",
     "apollo-server": "^3.11.1",
     "archiver": "^5.3.1",
+    "aws-lambda": "^1.0.7",
+    "aws-serverless-express": "^3.4.0",
     "bcrypt": "^5.1.0",
-    "diskusage": "^1.1.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "google-auth-library": "^8.7.0",
@@ -63,6 +67,8 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/archiver": "^5.3.1",
+    "@types/aws-lambda": "^8.10.119",
+    "@types/aws-serverless-express": "^3.3.5",
     "@types/bcrypt": "^5.0.0",
     "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.13",
@@ -84,6 +90,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
+    "serverless-offline": "^12.0.4",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
