--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 JWT_SECRET=ntlong
-DB_HOST=storage-app-cloud-db.chjcfkckfcut.ap-southeast-2.rds.amazonaws.com
+DB_HOST=database-1.cstgql0relf8.ap-southeast-1.rds.amazonaws.com
+DATABASE_URL=postgres://postgres:lzXMyTbEmLMs1Ou1znbJ@postgres.cstgql0relf8.ap-southeast-1.rds.amazonaws.com:5432/postgres
 DB_PORT=5432
 DB_USER_NAME=postgres
-DB_PASSWORD=okita123
+DB_PASSWORD=VoZHQaKdoQF9oYY9ROI5
 DB_NAME=postgres
 MAIL_USER_NAME=storageappmailer@gmail.com
 MAIL_PASSWORD=hsuwfkstapwdurvl
