--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,14 +44,14 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: .github/task-definition.json
+          task-definition: task-definition.json
           container-name: storage-app
           image: ${{ steps.build-image.outputs.image }}
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: .github/task-definition.json
+          task-definition: ${{ steps.task-def.outputs.task-definition }}
           service: storage-app-service
           cluster: storage-app-cluster
           wait-for-service-stability: true
